--- a/phishing-simulation.html
+++ b/phishing-simulation.html
@@ -196,17 +196,16 @@
 
   <!-- Website Header -->
   <header>
-    <h1>Cyber Awareness at IAA Institution</h1>
+    <h1>Cyber Awareness</h1>
+    <p>Institute of Accountancy Arusha (IAA)</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="courses.html">Email Checker</a>
+      <a href="security-tools.html">Password Tools</a>
+      <a href="phishing-simulation.html">Phishing Detection</a>
+    </nav>
   </header>
-
-  <!-- Website Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-     <a href="security-tools.html">Security Tools</a>
-    <a href="phishing-simulation.html">Phishing Simulation</a>
-    <a href="courses.html">courses</a>
-    <a href="about.html">About</a>
-  </nav>
 
   <!-- Tool Section -->
   <div class="container">
